--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
             <div class="row rowmargin">
                 <div class="col-xs-12">
-                    <h3 id="h3third">My Work Collection</h3>
+                    <h3 id="h3third">Wonderful Moments Together</h3>
                 </div>
             </div>
 
@@ -331,19 +331,14 @@
 
 	<div class="row rowmargin text-center">
 		<div class="col-xs-12">
-		<form id ="form" action="https://twitter.us16.list-manage.com/subscribe/post" method="POST">
-		<input type="hidden" name="u" value="6b7e34e3339b52dfb3f2ad3f4">
-		<input type="hidden" name="id" value="048d6cbe5c">
-		<input type="email" name="MERGE0" id="MERGE0" style="height:30px;width:75%;font-color:black;font-size:15px;border-radius:5px;padding:10px;margin:5px;" placeholder='Enter your email here...'>
-		<input type="submit" class="btn" sytle="border-radius:5px;padding:10px;margin:5px;height:30px;width:auto;font-size:15px;" value="Subscribe" onClick="return postThanks()">
-		</form>
+		
 		</div>	
         </div>
 
 
      	 <div class="row text-center" style="margin-top:10px;">
 		<div class="col-xs-12">
-			<p style="color:black"><i class="fa fa-copyright"></i>KaushikCodeArts 2018</p>
+			<p style="color:black"><i class="fa fa-copyright"></i>PiyushLovesNeha  2018</p>
 		</div>
 	 </div>
 
