--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
             width: auto;
             height: width;
         }
+	    
+	    .photoFrame {
+            border-width: 2px;
+            border-style: solid;
+            border-color: red;
+            border-radius: 5px;
+            margin: 0 auto;
+            width: auto;
+            height: width;
+        }
         #h1first {
             color: black;
             font-family: Lobster;
@@ -50,6 +60,7 @@
 	    p{
 	    font-size:15px;
             font-style:normal;
+		color: white;    
 	    }
     </style>
 
@@ -58,7 +69,7 @@
         <div class="container">
             <div class="navbar-brand">
 
-                <a target="_blank" href="https://www.youtube.com/channel/UC-L1ohk7M1aAv8IIiMXl3NA/featured" target="_blank" class="btn text-center" style="color:white;">Youtuber Sherni</a>
+                <a target="_blank" href="https://www.youtube.com/channel/UC-L1ohk7M1aAv8IIiMXl3NA/featured" target="_blank" class="btn text-center" style="color:white;"><i class="fa fa-youtube"></i></a>
             </div>
 
             <button class="navbar-toggle btn" data-toggle="collapse" data-target=" .navHeaderCollapse">
@@ -233,13 +244,13 @@
 	<div class="row rowmargin text-center">
                 <div class="col-xs-12">
                     <p>Like this when we were crazy</p>
-		<img src="crazy.JPG" alt="crazy" class="img-responsive">	
+		<img src="crazy.JPG" alt="crazy" class="img-responsive photoFrame">	
                 </div>
         </div>
       <div class="row rowmargin text-center">
                 <div class="col-xs-12">
                     <p>Or like this when we were SUPER CRAZY</p>
-		<img src="supercrazy.jpg" alt="supercrazy" class="img-responsive">	
+		<img src="supercrazy.jpg" alt="supercrazy" class="img-responsive photoFrame">	
                 </div>
         </div>
           
