--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         }
       
         .placeholderRecentWorks {
-            border-width: 2px;
+            border-width: 3px;
             border-style: solid;
-            border-color: gray;
+            border-color: Red;
             border-radius: 50%;
             margin: 0 auto;
             width: auto;
@@ -253,7 +253,33 @@
 		<img src="supercrazy.jpg" alt="supercrazy" class="img-responsive photoFrame">	
                 </div>
         </div>
-          
+           <div class="row rowmargin text-center">
+                <div class="col-xs-12">
+                    <p>The most awaited moment of our lives....</p>
+		<img src="married.jpg" alt="married" class="img-responsive photoFrame">	
+                </div>
+        </div>
+	
+	<div class="row rowmargin text-center">
+                <div class="col-xs-12">
+                    <p>We are the fun seekers :D </p>
+		<img src="funseeker.JPG" alt="funseeker" class="img-responsive photoFrame">	
+                </div>
+        </div>
+	
+	<div class="row rowmargin text-center">
+                <div class="col-xs-12">
+                    <p>Or when we try and act mature :) </p>
+		<img src="mature.jpg" alt="mature" class="img-responsive photoFrame">	
+                </div>
+        </div>
+	
+	<div class="row rowmargin text-center">
+                <div class="col-xs-12">
+                    <p>That date though..!!</p>
+		<img src="date.JPG" alt="date" class="img-responsive photoFrame">	
+                </div>
+        </div>
 
 <hr class="rowmargin"></hr>
     <!-- +++++++++++++++++++++++++++++++Third Background Image Section ends here :-]  +++++++++++++++++++++++++++++++-->
