--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <style>
 	    body{
-	    background-color:hotpink;
+	    background-color:pink;
 	    
 	    }
         .rowmargin {
@@ -24,7 +24,7 @@
         .placeholderRecentWorks {
             border-width: 3px;
             border-style: solid;
-            border-color: Red;
+            border-color: hotpink;
             border-radius: 50%;
             margin: 0 auto;
             width: auto;
@@ -34,7 +34,7 @@
 	    .photoFrame {
             border-width: 2px;
             border-style: solid;
-            border-color: red;
+            border-color: deeppink;
             border-radius: 5px;
             margin: 0 auto;
             width: auto;
@@ -178,11 +178,11 @@
 
 		<div class="row rowmargin text-center">
                 <div class="col-xs-12" style="font-size:30px;">
-		    <a href="https://www.facebook.com/Shutter-Bug-Kaushik-365167353566576/?ref=hl" target="_blank" class="btn btn-default"><i class="fa fa-heart" style="background-color:transparent;color:red;"></i></a>
-                    <a href="https://www.facebook.com/Rated.Kaushik" target="_blank" class="btn btn-default"><i class="fa fa-heart" style="background-color:transparent;color:red;"></i></a>
-                    <a href="https://www.linkedin.com/in/piyush-kaushik-61166a22?trk=nav_responsive_tab_profile" target="_blank" class="btn btn-default"><i class="fa fa-heart" style="background-color:transparent;color:red;"></i></a>
-                    <a href="https://twitter.com/kaushik_said" target="_blank" class="btn btn-default"><i class="fa fa-heart" style="background-color:transparent;color:red;"></i></a>
-		    <a href="https://www.quora.com/profile/Piyush-Kaushik-8" target="_blank" class="btn btn-default"><i class="fa fa-heart" style="background-color:transparent;color:red;"></i></a>
+		    <a href="" data-toggle="modal" data-target="#portfolio" class="btn btn-default" style="background-color:transparent;color:red;"><i class="fa fa-heart"></i></a>
+                    <a href="" data-toggle="modal" data-target="#portfolio" class="btn btn-default" style="background-color:transparent;color:red;"><i class="fa fa-heart"></i></a>
+                    <a href="" data-toggle="modal" data-target="#portfolio" class="btn btn-default" style="background-color:transparent;color:red;"><i class="fa fa-heart"></i></a>
+                    <a href="" data-toggle="modal" data-target="#portfolio" style="background-color:transparent;color:red;"><i class="fa fa-heart"></i></a>
+		    <a href="" data-toggle="modal" data-target="#portfolio" class="btn btn-default" style="background-color:transparent;color:red;"><i class="fa fa-heart"></i></a>
 			
 
                 </div>
