--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <style>
 	    body{
-	    background-color:pink;
+	    background-color:hotpink;
 	    
 	    }
         .rowmargin {
@@ -24,7 +24,7 @@
         .placeholderRecentWorks {
             border-width: 3px;
             border-style: solid;
-            border-color: hotpink;
+            border-color: deeppink;
             border-radius: 50%;
             margin: 0 auto;
             width: auto;
@@ -58,7 +58,7 @@
         }
         
 	    p{
-	    font-size:15px;
+	    font-size:25px;
             font-style:normal;
 		color: white;    
 	    }
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="navbar-brand">
 
-                <a target="_blank" href="https://www.youtube.com/channel/UC-L1ohk7M1aAv8IIiMXl3NA/featured" target="_blank" class="btn text-center" style="color:white;"><i class="fa fa-youtube"></i></a>
+                <a target="_blank" href="https://www.youtube.com/channel/UC-L1ohk7M1aAv8IIiMXl3NA/featured" target="_blank" class="btn text-center" style="color:white;"><i class="fa fa-youtube fa-2x"></i></a>
             </div>
 
             <button class="navbar-toggle btn" data-toggle="collapse" data-target=" .navHeaderCollapse">
@@ -178,11 +178,11 @@
 
 		<div class="row rowmargin text-center">
                 <div class="col-xs-12" style="font-size:30px;">
-		    <a href="" data-toggle="modal" data-target="#portfolio" class="btn btn-default" style="background-color:transparent;color:red;"><i class="fa fa-heart"></i></a>
-                    <a href="" data-toggle="modal" data-target="#portfolio" class="btn btn-default" style="background-color:transparent;color:red;"><i class="fa fa-heart"></i></a>
-                    <a href="" data-toggle="modal" data-target="#portfolio" class="btn btn-default" style="background-color:transparent;color:red;"><i class="fa fa-heart"></i></a>
+		    <a href="" data-toggle="modal" data-target="#portfolio" style="background-color:transparent;color:red;"><i class="fa fa-heart"></i></a>
                     <a href="" data-toggle="modal" data-target="#portfolio" style="background-color:transparent;color:red;"><i class="fa fa-heart"></i></a>
-		    <a href="" data-toggle="modal" data-target="#portfolio" class="btn btn-default" style="background-color:transparent;color:red;"><i class="fa fa-heart"></i></a>
+                    <a href="" data-toggle="modal" data-target="#portfolio" style="background-color:transparent;color:red;"><i class="fa fa-heart"></i></a>
+                    <a href="" data-toggle="modal" data-target="#portfolio" style="background-color:transparent;color:red;"><i class="fa fa-heart"></i></a>
+		    <a href="" data-toggle="modal" data-target="#portfolio" style="background-color:transparent;color:red;"><i class="fa fa-heart"></i></a>
 			
 
                 </div>
