--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	    .photoFrame {
             border-width: 2px;
             border-style: solid;
-            border-color: deeppink;
+            border-color: white;
             border-radius: 5px;
             margin: 0 auto;
             width: auto;
@@ -58,7 +58,7 @@
         }
         
 	    p{
-	    font-size:25px;
+	    font-size:20px;
             font-style:normal;
 		color: white;    
 	    }
@@ -73,7 +73,7 @@
             </div>
 
             <button class="navbar-toggle btn" data-toggle="collapse" data-target=" .navHeaderCollapse">
-                <i class="fa fa-heart" style="color:red;"></i>
+                <i class="fa fa-heart fa-2x" style="color:red;"></i>
             </button>
 
             <div class="collapse navbar-collapse navHeaderCollapse">
