--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         }
         
 	    p{
-	    font-size:20px;
+	    font-size:15px;
             font-style:normal;
 		color: white;    
 	    }
@@ -73,7 +73,7 @@
             </div>
 
             <button class="navbar-toggle btn" data-toggle="collapse" data-target=" .navHeaderCollapse">
-                <i class="fa fa-heart fa-2x" style="color:red;"></i>
+                <i class="fa fa-heart fa-2x" style="color:white;"></i>
             </button>
 
             <div class="collapse navbar-collapse navHeaderCollapse">
