--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <style>
 	    body{
-	    background-color:hotpink;
+	    background-color:white;
 	    
 	    }
         .rowmargin {
@@ -34,20 +34,20 @@
 	    .photoFrame {
             border-width: 2px;
             border-style: solid;
-            border-color: white;
+            border-color: deeppink;
             border-radius: 5px;
             margin: 0 auto;
             width: auto;
             height: width;
         }
         #h1first {
-            color: black;
+            color: deeppink;
             font-family: Lobster;
             margin-top: 100px;
             text-align: center;
         }
         #h3first, #h3second, #h3third, #h3fourth {
-            color: black;
+            color: deeppink;
             font-family: Lobster;
             text-align: center;
         }
@@ -60,7 +60,7 @@
 	    p{
 	    font-size:15px;
             font-style:normal;
-		color: white;    
+		color: red;    
 	    }
     </style>
 
@@ -278,6 +278,13 @@
                 <div class="col-xs-12">
                     <p>That date though..!!</p>
 		<img src="date.JPG" alt="date" class="img-responsive photoFrame">	
+                </div>
+        </div>
+	
+	<div class="row rowmargin text-center">
+                <div class="col-xs-12">
+                    <p>And more fun..!!</p>
+		<img src="peda.JPG" alt="peda" class="img-responsive photoFrame">	
                 </div>
         </div>
 
