--- a/index.html
+++ b/index.html
@@ -79,13 +79,10 @@
             <div class="collapse navbar-collapse navHeaderCollapse">
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href=" ">Home</a></li>
-         	    <li><a href="#h3fourth">Share</a></li>
-                    <li><a href="#h3second">About</a></li>
+                   
                     <li><a href="" data-toggle="modal" data-target="#portfolio">Fun Facts</a></li>
-		    <li><a href="" data-toggle="modal" data-target="#blogs">Blogs</a></li>	
-                    <li><a  href="" data-toggle="modal" data-target="#follow">Follow</a></li>
-		    <li><a  href="" data-toggle="modal" data-target="#translate">Translate</a></li>
+		    <li><a href="" data-toggle="modal" data-target="#portfolio">Fun Facts</a></li>
+	            <li><a href="" data-toggle="modal" data-target="#portfolio">Fun Facts</a></li>
                 </ul>
             </div>
         </div>
@@ -133,23 +130,7 @@
         </div>
         <div class="modal-body">
  <p>Games :</p>     
- <p><a href="https://kaushikdev.github.io/BatCrash/" target="_blank" >BatCrash</a></p>
- <p><a href="https://kaushikdev.github.io/Arkanoid/" target="_blank" >Arkanoid</a></p>
- <p><a href="https://KaushikDev.github.io/simonGame" target="_blank" >Simon Game</a></p>
- <p><a href="https://KaushikDev.github.io/TicTacToe" target="_blank" >Tic-Tac-Toe</a></p>
- <p>Applications :</p> 
- <p><a href="https://KaushikDev.github.io/pomodoroTimer" target="_blank" >Pomodoro Timer</a></p>
- <p><a href="https://KaushikDev.github.io/forParents" target="_blank" >A Tribute to Parents</a></p>
- <p><a href="https://KaushikDev.github.io/electronicCalculator" target="_blank" >Electronic Calculator</a></p>
- <p><a href="https://KaushikDev.github.io/randomQuotes" target="_blank" >Random Quote Machine</a></p>
- <p><a href="https://KaushikDev.github.io/wikiViewer" target="_blank" >Wiki Viewer</a></p>
- <p><a href="https://KaushikDev.github.io/weatherApp" target="_blank" >Weather App</a></p>    
- <p><a href="https://KaushikDev.github.io/twitchTV" target="_blank" >Twitch TV JSON API</a></p>
- <p><a href="https://KaushikDev.github.io/FirebaseTODOapp" target="_blank" >To-Do App</a></p>
- <p><a href="https://KaushikDev.github.io/particleMotion" target="_blank" >Particle Motion</a></p>
- <p><a href="https://KaushikDev.github.io/DictionaryApp" target="_blank" >Dictionary</a></p>		
- <p><a href="https://KaushikDev.github.io/DrawingBoard" target="_blank" >DrawingBoard</a></p>
- <p><a href="https://kaushikdev.github.io/ChatBot" target="_blank" >ChatBot</a></p>
+
  
 	      </div>
         <div class="modal-footer">
@@ -215,12 +196,12 @@
                     <h3 id="h3second">I Love You. Always have, always will !!</h3>
 
                     <p style="color:black;">
-                        It is good to meet you finally. So, my name is Piyush Kaushik and I am the designer of this website.<br><br>
-                        I am very much a novice programmer and an amateur photographer(check my photography page, there is a button on this site that takes you there).
+                        This is going to be some old style love rant, so bear with it. Ok here we go. Where do I even start?. Should I talk about the day I just came across with this beautiful bubbly girl profile picture who stole my heart like she was really there, or should I talk about the day when I actually met you, man that was  some adrenalin rush. That first bike ride together. That first of everything. I wish I could turn back time. Well not really, because the journey has just begun and we are making more and more memories along the way.<br><br>
+                       The point remains that we were supposed to be together and so we are. You were always the One and you will always be the One. Since day one, I knew I have to do anything to get you and what's more special is, even you thought the same. 
                         <br><br>
-                        I like to think and believe that there is nothing that you cannot learn and it is never too late to learn. And as they say,<i> "From humble beginnings come great things."</i>
-                     <br><br>I am a web development enthusiast and it's early days for me in web development, but I like to keep learning as and when I can.  
-                        <br><br>Professionally, I am Software Test Engineer(so, curious about stuff in general) and that's what currently makes my living. But I do hope that I will be able to contribute in active professional development someday.And I always believe that if you can dream it, you can surely achieve it. Cheers !! 
+                        This journey with you is the most special one and I am glad we're living it for real.<i> "Hey, I love you meri billi."</i>
+                     <br><br>This Valentines Day is really special because it just sums up the sacrifices we made for each other, the months, years wait , the distances, and guess what we are together now. Feels good, feels awesome my Queen. 
+                        <br><br>Now that we're married my love will not die, it'll only increase and so will be my duties. Sure, there will be problems ahead, few bumps down the road, not all will be rosy cozy, but take my word, I will always be by your side. I will always hold your hand and take us forward. King and Queen for the victory. <br><i> "I love you."</i>
                     </p>
                 </div>
 	</div>
