--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <style>
 	    body{
-	    background-color:deeppink;
+	    background-color:hotpink;
 	    
 	    }
         .rowmargin {
