--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <h4 class="modal-title">How NOT to make a collage !!</h4>
         </div>
         <div class="modal-body">
-<img src="Collage.jpg" alt="collage" class="img-responsive">	
+<img src="Collage-min.jpg" alt="collage" class="img-responsive">	
 
  
 	      </div>
@@ -289,7 +289,7 @@
 
             <div class="row text-center">
 			<div class="col-xs-12">
-                    <img src="np_main2.JPG" alt="my love" class="img-responsive placeholderRecentWorks">
+                    <img src="np_main2-min.JPG" alt="my love" class="img-responsive placeholderRecentWorks">
                 </div>
 			</div>
 	
@@ -329,13 +329,13 @@
 	<div class="row rowmargin text-center">
                 <div class="col-xs-12">
                     <p>Like this when we were crazy!!</p>
-		<img src="crazy.JPG" alt="crazy" class="img-responsive photoFrame">	
+		<img src="crazy-min.JPG" alt="crazy" class="img-responsive photoFrame">	
                 </div>
         </div>
       <div class="row rowmargin text-center">
                 <div class="col-xs-12">
                     <p>Or like this when we were SUPER CRAZY!!!</p>
-		<img src="supercrazy.jpg" alt="supercrazy" class="img-responsive photoFrame">	
+		<img src="supercrazy-min.jpg" alt="supercrazy" class="img-responsive photoFrame">	
                 </div>
         </div>
            <div class="row rowmargin text-center">
@@ -348,28 +348,28 @@
 	<div class="row rowmargin text-center">
                 <div class="col-xs-12">
                     <p>We are the fun seekers. \m/ :D </p>
-		<img src="funseeker.JPG" alt="funseeker" class="img-responsive photoFrame">	
+		<img src="funseeker-min.JPG" alt="funseeker" class="img-responsive photoFrame">	
                 </div>
         </div>
 	
 	<div class="row rowmargin text-center">
                 <div class="col-xs-12">
                     <p>Or when someone photobombs a nice picture. :/ </p>
-		<img src="photobomb.jpg" alt="mature" class="img-responsive photoFrame">	
+		<img src="photobomb-min.jpg" alt="mature" class="img-responsive photoFrame">	
                 </div>
         </div>
 	
 	<div class="row rowmargin text-center">
                 <div class="col-xs-12">
                     <p>That date though. :) </p>
-		<img src="date.JPG" alt="date" class="img-responsive photoFrame">	
+		<img src="date-min.JPG" alt="date" class="img-responsive photoFrame">	
                 </div>
         </div>
 	
 	<div class="row rowmargin text-center">
                 <div class="col-xs-12">
                     <p>And more fun..!!</p>
-		<img src="peda.JPG" alt="peda" class="img-responsive photoFrame">	
+		<img src="peda-min.JPG" alt="peda" class="img-responsive photoFrame">	
                 </div>
         </div>
 
